# carcinisation

./: .env.example  .env.test  .envrc  .git-blame-ignore-revs  .gitignore  .gitmodules  .mcp.json  .prototools  .taplo.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Makefile  README.md  bacon.toml  biome.json  cspell.config.json  deny.toml  install-web.sh  justfile  lefthook.yml  make-web.sh  opencode.jsonc  package.json  pnpm-workspace.yaml  recent_file_path.txt  ruff.toml  rust-toolchain.toml  rustfmt.toml  skills-lock.json
apps/carcinisation/: Cargo.toml  assets  single-stage.config.default.ron
apps/carcinisation/src/: app.rs  assets.rs  components.rs  globals.rs  input.rs  layer.rs  lib.rs  main.rs  resources.rs  window_slot.rs
apps/carcinisation/src/bevy_utils/: mod.rs
apps/carcinisation/src/core/: mod.rs  time.rs
apps/carcinisation/src/cutscene/: data.rs  events.rs  input.rs  messages.rs  mod.rs  resources.rs
apps/carcinisation/src/data/: keyframe.rs  mod.rs
apps/carcinisation/src/debug/: mod.rs  plugin.rs  systems.rs  types.rs
apps/carcinisation/src/first_person/: input.rs  interpolation.rs  mod.rs  monitor.rs  prediction.rs
apps/carcinisation/src/gallery/: components.rs  messages.rs  mod.rs  resources.rs  systems.rs
apps/carcinisation/tests/: asset_path_integrity.rs  behavior_step_sequencing.rs  composed_animation_cues.rs  dual_rendering_parity.rs  golden_state_snapshots.rs  smoke_test.rs  spawn_queue_determinism.rs
apps/carcinisation_server/: Cargo.toml
apps/carcinisation_server/src/: lib.rs  main.rs
apps/carcinisation_server/tests/: admin_socket.rs  aim_mode.rs  animation_states.rs  burn_contact_and_hit.rs  combat_authority.rs  combat_flamethrower.rs  combat_hitscan.rs  combat_parity.rs  combat_part_routing.rs  diagnostics_phase3.rs  enemy_attack.rs  guards_and_los.rs  map_reset.rs  net_connection.rs  net_input.rs  net_replication.rs  occupancy.rs  pickup.rs  player_death_respawn.rs  prediction_parity.rs  replay.rs  sp_mp_parity.rs
crates/activable/: Cargo.toml
crates/activable/src/: lib.rs
crates/asset_pipeline/: Cargo.toml
crates/asset_pipeline/src/: analysis.rs  aseprite.rs  composed_ron.rs  lib.rs  pxi.rs
crates/attack_data/: Cargo.toml
crates/attack_data/src/: asset.rs  compiler.rs  config.rs  lib.rs  packed.rs  plugin.rs  runtime.rs
crates/attack_data/tests/: validate_configs.rs
crates/carapace/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
crates/carapace/examples/: anchors.rs  animated_filters.rs  animated_sprites.rs  animated_text.rs  animated_tilemap.rs  brp_screenshot.rs  button.rs  canvas.rs  composite_animation.rs  composite_gpu.rs  composite_mixed.rs  composite_sprite.rs  cursor.rs  filter.rs  filter_layers.rs  gpu_palette.rs  layers.rs  line.rs  palette_change.rs  particles.rs  pixel_pick.rs  presentation_combined.rs  presentation_flip.rs  presentation_part.rs  presentation_rotation.rs  presentation_scale.rs  rect.rs  sprite.rs  sprite_filter.rs  state.rs  text.rs  text_filter.rs  tilemap.rs  tilemap_filter.rs
crates/carapace/macros/: Cargo.toml
crates/carapace/src/: animation.rs  atlas.rs  blink.rs  bundles.rs  camera.rs  constrained.rs  cursor.rs  debug_draw.rs  filter.rs  frame.rs  gpu_sprite.wgsl  image.rs  lib.rs  line.rs  map.rs  math.rs  palette.rs  particle.rs  picking.rs  position.rs  prelude.rs  presentation.rs  primitive.rs  pxi.rs  raycaster.rs  rect.rs  reflect.rs  screen.rs  screen.wgsl  set.rs  sprite.rs  text.rs  tilemap.rs  ui.rs
crates/carapace/xtask/: Cargo.toml
crates/carcinisation_base/: Cargo.toml
crates/carcinisation_base/src/: direction.rs  directional_animation.rs  directional_config.rs  fire_death.rs  game.rs  layer.rs  layer_order.rs  lib.rs
crates/carcinisation_collision/: Cargo.toml
crates/carcinisation_collision/src/: lib.rs  pixel_mask.rs  shapes.rs
crates/carcinisation_core/: Cargo.toml
crates/carcinisation_core/src/: components.rs  debug.rs  dev_reload.rs  globals.rs  lib.rs  ron_loading.rs  systems.rs
crates/carcinisation_cutscene/: Cargo.toml
crates/carcinisation_cutscene/src/: components.rs  data.rs  layer.rs  lib.rs
crates/carcinisation_fps/: Cargo.toml
crates/carcinisation_fps/src/: avatar_palette.rs  billboard.rs  camera.rs  collision.rs  data.rs  directional_billboard.rs  enemy.rs  layer.rs  lib.rs  map.rs  mosquiton.rs  player_attack.rs  plugin.rs  raycast.rs  render.rs  screen_particles.rs  sky.rs  spidey.rs
crates/carcinisation_fps_core/: Cargo.toml
crates/carcinisation_fps_core/src/: burning.rs  camera.rs  collision.rs  combat.rs  config.rs  enemy.rs  enemy_collision.rs  fire_death.rs  ground_fire.rs  hash_util.rs  hitscan.rs  layer.rs  lib.rs  map.rs  mosquiton.rs  movement.rs  occupancy.rs  pickup.rs  presentation.rs  raycast.rs  reaction.rs  spidey.rs
crates/carcinisation_fps_render/: Cargo.toml
crates/carcinisation_fps_render/src/: billboard.rs  data_render.rs  lib.rs  mosquiton.rs  player_attack.rs  plugin.rs
crates/carcinisation_map_view/: Cargo.toml
crates/carcinisation_map_view/src/: classification.rs  config.rs  lib.rs  overlay.rs  rendering.rs  wall_colors.rs
crates/carcinisation_net/: Cargo.toml
crates/carcinisation_net/src/: channels.rs  components.rs  lib.rs  plugin.rs  prediction.rs  protocol.rs  sim_hash.rs  tick.rs  transport.rs
crates/carcinisation_ors/: Cargo.toml
crates/carcinisation_ors/src/: assets.rs  lib.rs  stubs.rs
crates/carcinisation_shared/: Cargo.toml
crates/carcinisation_shared/src/: layer.rs  lib.rs
crates/cween/: Cargo.toml
crates/cween/src/: animation.rs  lib.rs  structs.rs
editor/: Cargo.toml
editor/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/generate-editor-bindings/: Cargo.toml
tools/editor/: .gitignore  Cargo.toml  README.md  editor.ron
tools/editor/src/: components.rs  constants.rs  events.rs  history.rs  main.rs  placement.rs  resources.rs  systems.rs  timeline.rs
tools/scene-file-watcher/: Cargo.toml
tools/scene-file-watcher/src/: main.rs
(+1013 files in other folders)
