[workspace]
resolver = "2"
members = [
    "apps/carcinisation",
    "crates/activable_macros",
    "crates/activable",
    "crates/asset_pipeline",
    "crates/carcinisation_collision",
    "crates/carcinisation_core",
    "crates/cween",
    "scripts/generate-typeface",
    "scripts/process-aseprite",
    "scripts/process-gfx",
    "tools/editor",
    "tools/assert_assets_path",
    "tools/scene-file-watcher",
]

[workspace.package]
edition = "2024"
version = "0.2.0"

[workspace.dependencies]
assert_assets_path = { path = "tools/assert_assets_path" }
asset_pipeline = { path = "crates/asset_pipeline" }
carcinisation_collision = { path = "crates/carcinisation_collision" }
# Dynamic linking speeds up host builds; wasm targets ignore this feature.
bevy = { version = "0.18", features = [
    "dynamic_linking",
    "file_watcher",
    "wayland",
    "std",
    "async_executor",
] }
bevy_brp_extras = "0.18"
bevy_state = "0.18"
bevy_ecs = "0.18"
bevy_common_assets = { version = "0.15", features = ["ron", "json"] }
bevy-inspector-egui = "0.36"
bevy_framepace = "0.21"
colored = "3.1.1"
derive-new = "0.7.0"
derive_more = "2.1.1"
lazy_static = "1.5.0"
leafwing-input-manager = "0.20"
num_enum = "0.7.5"
rand = "0.10.0"
seldom_pixel = { git = "https://github.com/marcotoniut/seldom_pixel", branch = "main", default-features = true, features = [
    "line",
    "reflect",
] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.17.0"
serde_json = "1.0"
ron = "0.12.0"
anyhow = "1.0"
strum = "0.28.0"
strum_macros = "0.28.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "z"

[workspace.lints.rust]
warnings = "deny"
