[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_assets_path = { path = "../assert_assets_path" }
ron = "0.8.1"
bevy = { features = ["wayland"], version = "0.13" }
bevy_common_assets = { features = ["ron"], version = "0.10" }
bevy_editor_pls = "0.8.0"
carcinisation = { path = "../" }
derive-new = "0.6.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8.1"
