[package]
name = "carcinisation"
version.workspace = true
edition.workspace = true
description = "Main Bevy executable for stage-based pixel shooter"
default-run = "carcinisation"

[features]
default = []

[dependencies]
# Workspace crates
activable = { path = "../../crates/activable" }
activable_macros = { path = "../../crates/activable_macros" }
carcinisation_core = { path = "../../crates/carcinisation_core" }
carcinisation_collision = { workspace = true, features = ["pixel-mask"] }
cween = { path = "../../crates/cween" }

# Bevy ecosystem
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_common_assets = { workspace = true }
bevy_ecs = { workspace = true }
bevy_framepace = { workspace = true }
bevy_state = { workspace = true }
leafwing-input-manager = { workspace = true }
seldom_pixel = { workspace = true }

# Serialization
ron = { workspace = true }
serde = { workspace = true }
serde-generate = "0.26"
serde-reflection = "0.4"
serde_json = { workspace = true }
serde_with = { workspace = true }

# Utilities
anyhow = { workspace = true }
assert_assets_path = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "ron_bridge"
path = "src/bin/ron_bridge.rs"

[[bin]]
name = "single_stage"
path = "src/bin/single_stage.rs"
