[package]
name = "carcinisation"
version.workspace = true
edition.workspace = true
description = "Main Bevy executable for stage-based pixel shooter"
default-run = "carcinisation"

[features]
default = ["brp"]
gallery = []
brp = ["dep:bevy_brp_extras", "carapace/brp_extras"]
trace_chrome = ["bevy/trace_chrome", "carapace/profiling_spans"]
trace_tracy = ["bevy/trace_tracy", "carapace/profiling_spans"]

[dependencies]
carcinisation_cutscene = { path = "../../crates/carcinisation_cutscene" }
# Workspace crates
activable = { path = "../../crates/activable" }
activable_macros = { path = "../../crates/activable_macros" }
carcinisation_core = { path = "../../crates/carcinisation_core" }
cween = { path = "../../crates/cween" }
carcinisation_base = { path = "../../crates/carcinisation_base" }
carcinisation_collision = { workspace = true, features = ["pixel-mask"] }
carcinisation_ors = { path = "../../crates/carcinisation_ors" }
carcinisation_fps = { path = "../../crates/carcinisation_fps" }
carcinisation_input = { path = "../../crates/carcinisation_input" }
asset_pipeline = { workspace = true }

# Bevy ecosystem
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_common_assets = { workspace = true }
bevy_ecs = { workspace = true }
bevy_brp_extras = { workspace = true, optional = true }
bevy_framepace = { workspace = true }
bevy_state = { workspace = true }
leafwing-input-manager = { workspace = true }
carapace = { workspace = true }

# Serialization
ron = { workspace = true }
serde = { workspace = true }
serde-generate = "0.26"
serde-reflection = "0.4"
serde_json = { workspace = true }
serde_with = { workspace = true }

# Utilities
anyhow = { workspace = true }
assert_assets_path = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
dotenvy = "0.15"
lazy_static = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bin]]
name = "ron_bridge"
path = "src/bin/ron_bridge.rs"

[[bin]]
name = "single_stage"
path = "src/bin/single_stage.rs"

[[bin]]
name = "gallery"
path = "src/bin/gallery.rs"

[[bin]]
name = "fps_test"
path = "src/bin/fps_test.rs"
