[package]
name = "carcinisation_server"
edition.workspace = true
version.workspace = true
[features]
default = [ "native" ]
native = [
  "carcinisation_net/native",
  "bevy_replicon_renet2/native_transport",
  "bevy_replicon_renet2/netcode",
  "bevy_replicon_renet2/server",
]
brp = [ "bevy/bevy_remote" ]
trace_chrome = [ "bevy/trace_chrome" ]
trace_tracy = [ "bevy/trace_tracy" ]
[dependencies]
bevy = { version = "0.18", default-features = false }
bevy_renet2 = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet2 = { workspace = true }
carcinisation_admin = { path = "../../crates/carcinisation_admin" }
carcinisation_fps_core = { path = "../../crates/carcinisation_fps_core" }
carcinisation_net = { path = "../../crates/carcinisation_net" }
clap = { version = "4.5", features = [ "derive", "env" ] }
renet2 = { workspace = true }
serde_json = { workspace = true }
[dev-dependencies]
bevy = { workspace = true }
