[package]
name = "asset_pipeline"
version.workspace = true
edition.workspace = true
description = "Shared asset-pipeline primitives for Aseprite export and related tooling"

[dependencies]
anyhow.workspace = true
aseprite-loader = "0.4.2"
flate2 = "1.1"
image = "0.25"
ron.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
toml = "1.0"
