[package]
name = "attack_data"
version = "0.1.0"
edition = "2021"

[features]
default = []
attack_hot_reload = []

[dependencies]
bevy = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
bincode = "1.3"
thiserror = "1.0"
log = { workspace = true }
glob = "0.3"

carcinisation_core = { path = "../carcinisation_core" }
seldom_pixel = { workspace = true }
