[package]
name = "carcinisation_collision"
version.workspace = true
edition.workspace = true
description = "Collision detection primitives and pixel-mask support"

[features]
default = []
pixel-mask = ["carapace"]

[dependencies]
bevy = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
carapace = { workspace = true, optional = true }
