[package]
name = "carcinisation_core"
version.workspace = true
edition.workspace = true
description = "Shared utilities for runtime, UI, and editor"

[dependencies]
bevy = { workspace = true }
seldom_pixel = { workspace = true, features = ["line"] }

assert_assets_path = { workspace = true }
derive-new = { workspace = true }
lazy_static = { workspace = true }
