[package]
name = "carcinisation_core"
version.workspace = true
edition.workspace = true
description = "Shared utilities for runtime, UI, and editor"
[features]
hot_reload = [  ]
[dependencies]
assert_assets_path = { workspace = true }
bevy = { workspace = true }
carapace = { workspace = true, features = [ "line" ] }
derive-new = { workspace = true }
lazy_static = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
