[package]
name = "carcinisation_fps_core"
edition.workspace = true
version.workspace = true
[features]
hot_reload = [ "carcinisation_core/hot_reload" ]
[dependencies]
bevy = { workspace = true }
bevy_math = { version = "0.18.0" }
carapace = { workspace = true }
carcinisation_core = { path = "../carcinisation_core" }
ron = { workspace = true }
serde = { workspace = true }
vec1 = { workspace = true }
