[package]
name = "carcinisation_fps_render"
edition.workspace = true
version.workspace = true

[dependencies]
asset_pipeline = { workspace = true }
carapace = { workspace = true }
carcinisation_fps_core = { path = "../carcinisation_fps_core" }
bevy = { workspace = true }
bevy_math = { version = "0.18.0" }
flate2 = "1.1"
rand = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
