[package]
name = "carcinisation_net"
edition.workspace = true
version.workspace = true

[features]
default = ["native"]
native = ["bevy_replicon_renet2/native_transport", "bevy_replicon_renet2/netcode"]
wasm_client = ["bevy_replicon_renet2/ws_client_transport"]
wasm_server = ["bevy_replicon_renet2/ws_server_transport"]

[dependencies]
bevy = { workspace = true }
bevy_math = { version = "0.18" }
bevy_replicon = { workspace = true }
bevy_replicon_renet2 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
