[package]
name = "cween"
version.workspace = true
edition.workspace = true
description = "Tweening system for animating stage entities on fixed-step time domains"

[dependencies]
carcinisation_core = { path = "../carcinisation_core" }

bevy = { workspace = true }
seldom_pixel = { workspace = true, features = ["line"] }

derive-new = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
