[package]
name = "editor"
version = "0.1.0"
edition.workspace = true

[dependencies]
assert_assets_path = { workspace = true }
bevy = { workspace = true }
bevy_common_assets = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_prototype_lyon = { version = "0.15", optional = true }
carcinisation = { path = "../../apps/carcinisation" }
derive-new = { workspace = true }
derive_more = { workspace = true }
futures-lite = "2.3.0"
lazy_static = { workspace = true }
rfd = "0.14.1"
ron = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }

[features]
default = []
full_editor = ["bevy_prototype_lyon"]
