[package]
name = "editor"
version = "0.1.0"
edition.workspace = true
description = "Bevy-based scene editor for stages and cutscenes"

[dependencies]
anyhow = { workspace = true }
assert_assets_path = { workspace = true }
asset_pipeline = { workspace = true }
bevy = { workspace = true }
bevy_brp_extras = { workspace = true }
bevy_common_assets = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_prototype_lyon = { version = "0.16", optional = true }
carcinisation_cutscene = { path = "../../crates/carcinisation_cutscene" }
carcinisation_ors = { path = "../../crates/carcinisation_ors" }
derive-new = { workspace = true }
derive_more = { workspace = true }
futures-lite = "2.6.1"
lazy_static = { workspace = true }
rfd = "0.17.2"
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
image = "0.25"

[features]
default = ["full_editor"]
full_editor = ["bevy_prototype_lyon"]
