[package]
name = "scene-file-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { features = ["wayland"], version = "0.15" }
bevy_common_assets = { features = ["ron"], version = "0.12" }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", rev = "1d640f0ff62be4a021393757b05ea77089384b0e" }
carcinisation = { path = "../../" }
colored = "2.1.0"
derive-new = "0.6.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
notify = "6.1.1"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8.1"
