[package]
name = "scene-file-watcher"
version = "0.1.0"
edition.workspace = true

[dependencies]
bevy = { workspace = true, features = ["wayland"] }
bevy_common_assets = { workspace = true }
bevy-inspector-egui = { workspace = true }
carcinisation = { path = "../../apps/carcinisation" }
colored = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
notify = "6.1.1"
ron = "0.8.1"
serde = { workspace = true }
serde_with = { workspace = true }
