[package]
name = "carapace_macros"
version = "0.3.0-dev"
edition = "2021"
categories = [ "game-development" ]
description = "Macros for `carapace`"
keywords = [ "gamedev", "bevy", "graphics", "gui", "2d" ]
repository = "https://github.com/marcotoniut/carcinisation"
[lib]
proc-macro = true
[dependencies]
quote = "1.0"
syn = "2.0"
